--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 	
-	<title>ONON audio</title>
+	<title>Zinchro</title>
 
 	<!-- Mobile -->
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
@@ -17,13 +17,8 @@
 	
 </head>
 	<body>	
-		<!-- Page Content -->
 		<div id="container">
-			<br><br>
-			<img src="img/onon-text.png" class="img-responsive" alt="Responsive image">
-			<!-- <div id="subscribe">		
-			<input type="email" placeholder="email address" required="required">
-			<input type="submit" value="submit"> -->
+			<img src="img/zinchro-teaser-2.jpg" class="img-responsive">
 		</div>
 	</body>
 </html>
