added social buttons and changed background image

--- a/index.html
+++ b/index.html
@@ -1,24 +1,33 @@
 <!doctype html>
 
 <head>
-	<meta charset="utf-8">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	
-	<title>Zinchro</title>
+      <meta charset="utf-8">
+      <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-	<!-- Mobile -->
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+      <title>Zinchro</title>
 
-	<!-- CSS -->
-	<link rel="stylesheet" href="css/reset.css">
-	<link rel="stylesheet" href="css/animate.css">
-	<link rel="stylesheet" href="css/styles.css">
-	<link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'>
-	
+      <!-- Mobile -->
+      <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
+      <!-- CSS -->
+      <link rel="stylesheet" href="css/reset.css">
+      <link rel="stylesheet" href="css/animate.css">
+      <link rel="stylesheet" href="css/styles.css">
+      <link rel="stylesheet" href="css/font-awesome.css">
+      <!-- <link href='http://fonts.googleapis.com/css?family=Muli:300,400' rel='stylesheet' type='text/css'> -->
+  
 </head>
-	<body>	
-		<div id="container">
-			<img src="img/zinchro-teaser-2.jpg" class="img-responsive">
-		</div>
-	</body>
+      <body>  
+            <!-- <div id="container" style="border:1px solid red;">
+                  <img src="images/onon-teaser-2.jpg" class="img-responsive">
+            </div> -->
+
+            <div id="footer">
+                  <a class="fa fa-fw fa-envelope fa-lg" href="mailto:info@zinchro.com"></a>
+                  <a class="fa fa-fw fa-facebook fa-lg" href="http://www.facebook.com/zinchro"></a>
+                  <a class="fa fa-fw fa-instagram fa-lg" href="http://www.instagram.com/zinchro"></a>
+            </div>
+                  </ul>
+            </div>
+      </body>
 </html>
